--- a/application/admin/view/salary/salary/edit.html
+++ b/application/admin/view/salary/salary/edit.html
@@ -3,16 +3,16 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Username')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-username" data-rule="required" class="form-control" name="row[username]" type="text" value="{$row.username|htmlentities}">
+            <input id="c-username" data-rule="required" class="form-control" name="row[username]" type="text" value="{$row.username|htmlentities}" readonly>
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Id_card')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-id_card" data-rule="required" class="form-control" name="row[id_card]" type="text" value="{$row.id_card|htmlentities}">
+            <input id="c-id_card" data-rule="required" class="form-control" name="row[id_card]" type="text" value="{$row.id_card|htmlentities}" readonly>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" style=" pointer-events: none;">
         <label class="control-label col-xs-12 col-sm-2">{:__('Sex')}:</label>
         <div class="col-xs-12 col-sm-8">
 <!--            <input id="c-sex" data-rule="required" class="form-control" name="row[sex]" type="text" value="{$row.sex|htmlentities}">-->
