--- a/application/admin/view/salary/salary/index.html
+++ b/application/admin/view/salary/salary/index.html
@@ -11,12 +11,16 @@
                         <a href="javascript:;" class="btn btn-success btn-edit btn-disabled disabled {:$auth->check('salary/salary/edit')?'':'hide'}" title="{:__('Edit')}" ><i class="fa fa-pencil"></i> {:__('Edit')}</a>
                         <a href="javascript:;" class="btn btn-danger btn-del btn-disabled disabled {:$auth->check('salary/salary/del')?'':'hide'}" title="{:__('Delete')}" ><i class="fa fa-trash"></i> {:__('Delete')}</a>
 <!--                        <a href="javascript:;" class="btn btn-danger btn-import {:$auth->check('salary/salary/import')?'':'hide'}" title="{:__('Import')}" id="btn-import-file" data-url="ajax/upload" data-mimetype="csv,xls,xlsx" data-multiple="false"><i class="fa fa-upload"></i> {:__('Import')}</a>-->
-                        <div>
+
                             <input id="datetimepicker" data-rule="required"  class="form-control datetimepicker form-datetime" data-date-format="YYYY-MM"  data-use-current="true"  name="row['salary_time']"  type="text" value="{:date('Y-m')}"   />
-                            <a href="javascript:;"  onclick="check_import()" class="btn btn-danger btn-import {:$auth->check('salary/salary/import?id=123')}" title="{:__('Import')}" id="btn-import-file" data-url="ajax/upload" data-mimetype="csv,xls,xlsx" data-multiple="false">
-                                <i class="fa fa-upload"></i> {:__('Import')}
-                            </a>
-                        </div>
+<!--                            <a href="javascript:;"  type="file" name="file" onclick="check_import()" class="btn btn-danger btn-import" title="{:__('Import')}"  data-mimetype="csv,xls,xlsx" data-multiple="false">-->
+<!--                                <i class="fa fa-upload"></i> {:__('Import')}-->
+<!--                            </a>-->
+
+                        <form action="">
+                            <input type="file" id="file" onchange="check_import(this)" name="file">
+                        </form>
+
                     </div>
                     <table id="table" class="table table-striped table-bordered table-hover table-nowrap"
                            data-operate-edit="{:$auth->check('salary/salary/edit')}" 
@@ -32,12 +36,33 @@
 <script>
     var month;
     function check_import(){
-        var result  = $("#datetimepicker").val();
-        if(result){
-            alert('您导入的是'+result+'的数据');
-            month  =  '123564';
-        }else{
-            return false;
-        }
+        var month  = $("#datetimepicker").val();
+            // 上传excel文件
+            var fd = new FormData();
+            fd.append("file", document.getElementById("file").files[0]);
+            $.ajax({
+                url: 'ajax/upload',
+                type:"post",
+                data:fd,
+                processData:false,
+                contentType:false,
+                success:function(data){
+                if(data.code == 1){
+                    var filePath = data.data.url;
+                    $.ajax({
+                        url: 'salary/salary/check_import?month='+ month,
+                        type:"post",
+                        data:{filePath:filePath},
+                        success:function(data){
+                           if(data.code  == 1){
+                               window.location.href=data.url;
+                           }
+                        },
+                    });
+                }
+            },
+            dataType:"json"
+        });
+
     }
 </script>
